Basic framework for location/asset hierarchy navigation is complete!

--- a/lua_widget_m4_info.properties
+++ b/lua_widget_m4_info.properties
@@ -1,5 +1,5 @@
 #This file contains the lua m4Constants, the widgetQualifying ids and the type of the widget
-#Fri May 23 17:08:56 EDT 2014
+#Fri May 23 22:08:16 EDT 2014
 ~|~frmDowntime.HBox0c75f81874c1f42=box
 ~|~frmValveInspection.HBox0b56740eae09645=box
 ~|~popTimePicker.CopyButton0bcf4d218cf034e=button
@@ -7,11 +7,11 @@
 ~|~frmCreateWO.navDowntime=button
 ~|~popupInstrument.CopyLabel0fcc56a69114040=label
 ~|~popupInstrument.CopyLabel0d8358e8536fb4d=label
+~|~popupGGS.CopyButton0ccfb73b5615340=button
 ~|~frmViewActiveWO.CopyLabel049e0403d6ac747=label
 ~|~popTimePicker.CopyVBox0d3418e71737442=box
 ~|~popupInstrument.CopyLabel079d72d55877849=label
 ~|~popupEquipment.CopyhbxSelectedSite0a83de29403554e=box
-~|~popupArea.hbxSite=box
 ~|~frmValveInspection.CopyHBoxproblemCode09f431432eb0743=box
 ~|~frmViewAwaitingWO.CopyLabel00e429794d33c49=label
 ~|~popAttachments.HBox03a58a73124034d=box
@@ -26,19 +26,19 @@
 ~|~frmViewAwaitingWO.CopyLabel0933d517e58f64b=label
 ~|~frmValveInspection.CopyHBox0f8a66579044d48=box
 ~|~popupSite.CopyButton0302e6379156b45=button
+~|~popupGGS.CopyHBox03c50b568f6cf4d=box
 ~|~popLocationFilter.combobox1568159912394375=combobox
 ~|~frmViewActiveWO.navDowntime=button
 ~|~frmDowntime.CopyHBoxproblemCode0b43063da71284f=box
+~|~popupArea.lbl1=label
 ~|~popupFacSystem.CopyhbxSelectedSite0a41e0b9afd634e=box
 ~|~frmViewMoreInfo.txtarMoreInfo=textarea2
 ~|~popAttachments.CopyHBox022f0bb539f3443=box
 ~|~frmViewActiveWO.CopyLabel04b6703bba78b4f=label
 ~|~frmCreateWO.swiATF=switch
 ~|~frmEditActiveWO.CopyHBoxproblemCode053448eb49a624b=box
-~|~popupFacility.CopyHBox09c3bdd4f285b41=box
 ~|~frmViewActiveWO.CopyButton0443fe6b1224e46=button
 ~|~popupSubEquipment.CopyhbxSelectedSite007380155179146=box
-~|~popupGGS.CopyButton0f561e1d9072c42=button
 ~|~frmEditActiveWO.hboxMain=box
 ~|~frmViewAwaitingWO.CopyLabel0752fd18ea8df40=label
 ~|~popupInstrument.CopyhbxSelectedSite015b13076d3434b=box
@@ -61,7 +61,6 @@
 ~|~popupInstrument.HBox00ec5efe5e8704a=box
 ~|~frmViewMoreInfo.CopyLabel09a8442b12ca94c=label
 ~|~popAttachments.HBox024685c11b3444c=box
-~|~popupGGS.CopyhbxSelectedSite0549c96d36a1343=box
 ~|~frmDowntime.CopyComboBox07576ca61d4d447=combobox
 ~|~frmEditActiveWO.CopyComboBox0ba0a2256cbb641=combobox
 ~|~popupFacSystem.CopyLabel03cb8304f06e345=label
@@ -80,7 +79,7 @@
 ~|~popupEquipment.CopyButton03dcd1d3df30740=button
 ~|~popupFacSubsys.CopyhbxSelectedSite03cd0f4be5fdc4b=box
 ~|~frmViewMoreInfo.CopyButton06217ec4133174a=button
-~|~popupGGS.CopyLabel075064154ee1545=label
+~|~popupGGS.CopyButton028570489d35040=button
 ~|~popupEquipment.CopyHBox03994091f821d41=box
 ~|~popAttachments.Button0dfb95bb959a149=button
 ~|~popDueDateFilter.CopyHBox087eed2ceed8d4a=box
@@ -111,6 +110,7 @@
 ~|~frmMoreInfoList.navMoreInfo=button
 ~|~frmViewAwaitingWO.hboxMain=box
 ~|~frmMoreInfoList.navDowntime=button
+~|~popupFacility.hbox1568159912432590=box
 ~|~frmEditActiveWO.CopyLabel0b49c2022ced747=label
 ~|~popupInstrument=popup
 ~|~frmActiveWOList.Segment01e92683e273f49=segment2
@@ -130,7 +130,8 @@
 ~|~popupFacSubsys.CopyhbxSelectedSite0d7502134fc0241=box
 ~|~frmViewAwaitingWO.Label027fba225f4ab44=label
 ~|~popupArea.CopyButton0ccfb73b5615340=button
-~|~popupFacility.CopyLabel0f94c0f0c70304a=label
+~|~popupGGS.hbx2=box
+~|~popupGGS.hbx1=box
 ~|~popupFacSystem.CopyLabel0a38bf8775d6e4a=label
 ~|~frmCreateWO.hboxProblemCode=box
 ~|~frmViewMoreInfo.CopyLabel00f77a45ee9e548=label
@@ -162,10 +163,7 @@
 ~|~frmEditActiveWO.CopyHBoxproblemCode08bca32c8dca142=box
 ~|~frmValveInspection.CopyTextField0172af93a903d4b=textbox2
 ~|~popupInstrument.CopyLabel06bd7446b1e3448=label
-~|~popupGGS.CopyhbxSelectedSite082e4cae5fdbe4d=box
-~|~popupGGS.CopyLabel02fe4739edbd74c=label
 ~|~frmViewActiveWO.Button0b6a1c72615e449=button
-~|~popupFacility.CopyhbxSelectedArea0c570010f615341=box
 ~|~frmMoreInfoList.CopyVBox05c46e1637ddc4d=box
 ~|~frmDowntime.CopyComboBox0c4d3e9e37f1c49=combobox
 ~|~frmViewMoreInfo.CopyLabel0752fd18ea8df40=label
@@ -184,16 +182,13 @@
 ~|~frmViewActiveWO.CopyLabel08cb2e16ea0f643=label
 ~|~frmViewActiveWO.Label050d932913f2a40=label
 ~|~frmValveInspection.CopyLabel0faac95a083c447=label
-~|~popupGGS.CopyhbxSelectedArea07dba3971ff5c41=box
 ~|~popupInstrument.CopyLabel07f3e49de47b24f=label
 ~|~frmMoreInfoList.navCreateWorkOrder=button
 ~|~popupEquipment.CopyhbxSelectedArea0fb23f8f4fec448=box
 ~|~frmValveInspection.Button06ff7fc2a4ba74b=button
 ~|~frmViewAwaitingWO.CopyLabel0d5715dadfc7b44=label
-~|~frmViewActiveWO.Label0dd01e45bbed64e=label
 ~|~frmViewAwaitingWO.CopyButton0769390d0dfe14e=button
-~|~popupFacility.CopyLabel05b54879243f14a=label
-~|~popupFacility.CopyLabel06bf7d9ba77e841=label
+~|~frmViewActiveWO.Label0dd01e45bbed64e=label
 ~|~frmViewAwaitingWO.CopyHBox054a7688c99f04c=box
 ~|~frmDowntime.vboxNav=box
 ~|~frmDowntime.CopyLabel01fffc95784aa41=label
@@ -226,15 +221,17 @@
 ~|~frmActiveWOList.navAwaitingApproval=button
 ~|~popupSubEquipment.CopyhbxSelectedSite0b0b2cf00bbea48=box
 ~|~popupInstrument.hbxSelectedArea=box
+~|~popupFacility.hbx2=box
+~|~popupFacility.hbx1=box
 ~|~popDueDateFilter.CopyButton0d1454a321f8845=button
 ~|~frmMainMenu=form2
 ~|~frmApprovalWOList.navActiveWorkOrders=button
 ~|~frmDowntime.CopyHBoxproblemCode07a9f578aff6d42=box
-~|~popupFacility.CopyLabel079f089a6f5cc4a=label
 ~|~frmCreateWO.CopyLabel0ac34efeff0ea44=label
 ~|~popAttachments=popup
 ~|~frmViewAwaitingWO.CopyLabel047f5f421bd714c=label
 ~|~popupSubEquipment.CopyhbxSelectedSite0fecf78adf87041=box
+~|~popupFacility.CopyHBox03c50b568f6cf4d=box
 ~|~popupInstrument.CopyhbxSelectedSite044ea2f0a40744f=box
 ~|~popDueDateFilter.hbox1568159912380697=box
 ~|~frmViewActiveWO.CopyHBox05b1a6322d91c4d=box
@@ -248,7 +245,6 @@
 ~|~frmCreateWO.navAwaitingApproval=button
 ~|~popTimePicker.CopyHBox09052f03a32d945=box
 ~|~frmEditActiveWO.CopyHBoxproblemCode07907a4075bf645=box
-~|~popupGGS.CopyLabel0883f05b779ee4b=label
 ~|~popupGGS=popup
 ~|~popChangeWOStatus.cbxCauseCode=combobox
 ~|~frmViewActiveWO.txtWorkDuration=textbox2
@@ -258,7 +254,7 @@
 ~|~popupFacSystem.CopyLabel05f98900c65984d=label
 ~|~popupEquipment.CopyhbxSelectedSite093410928f2d44f=box
 ~|~popWOApproval.CopyHBox0f5f643c2300348=box
-~|~popupFacility.CopyhbxSelectedSite05fc745519d4642=box
+~|~popupArea.hbx1=box
 ~|~frmViewAwaitingWO.navCreateWorkOrder=button
 ~|~popAttachments.Segment0a48f1e46ed9c49=segment2
 ~|~frmViewAwaitingWO.CopyHBox08f44f5d749384d=box
@@ -282,7 +278,6 @@
 ~|~frmViewAwaitingWO.navMoreInfo=button
 ~|~frmMainMenu.navDowntime=button
 ~|~frmViewActiveWO.CopyLabel077a2e83b18404e=label
-~|~popupFacility.CopyLabel06d01cb1f9efe4c=label
 ~|~frmValveInspection.CopyHBox0440937294c5847=box
 ~|~frmViewAwaitingWO.CopyLabel098b20d3da7094d=label
 ~|~frmViewAwaitingWO.navDowntime=button
@@ -300,7 +295,6 @@
 ~|~popupFacSubsys.CopyLabel0bba38b1a19ba4d=label
 ~|~frmCreateWO.CopyLabel0afdef52ce3ec48=label
 ~|~frmViewActiveWO.CopyHBox042c613d0ed6048=box
-~|~popupFacility.CopyhbxSelectedSite051f8339c86a447=box
 ~|~frmMoreInfoList.hboxMain=box
 ~|~popupSubEquipment.CopyhbxSelectedSite0f4cd88ec9aeb42=box
 ~|~popPriorityFilter.label1568159912380696=label
@@ -331,7 +325,6 @@
 ~|~frmViewAwaitingWO.CopyLabel0f880717279644d=label
 ~|~frmViewMoreInfo.navAwaitingApproval=button
 ~|~popupFacSubsys.CopyHBox055ca4f294ed649=box
-~|~popupFacility.CopyLabel04fbe6ca6263849=label
 ~|~frmCreateWO.CopyHBoxproblemCode03e239211b13f46=box
 ~|~frmValveInspection.CopyTextField003281708ff164e=textbox2
 ~|~frmViewActiveWO.CopyLabel0c97888ab94614e=label
@@ -339,7 +332,6 @@
 ~|~frmEditActiveWO.CopyButtonScanbarcode0b62a166cd65640=button
 ~|~popupEquipment.CopyLabel01702a48bb98a48=label
 ~|~popupInstrument.Label0bc97360a806d4d=label
-~|~popupGGS.CopyLabel0906a710f23404d=label
 ~|~popLocationFilter.CopyButton0d1454a321f8845=button
 ~|~frmCreateWO.CopyComboBox044e2ed2adaa347=combobox
 ~|~popLongdesc.Label0b2456e8425e14c=label
@@ -347,7 +339,6 @@
 ~|~frmViewActiveWO.Button08d29ce5c44a44b=button
 ~|~frmValveInspection.CopyComboBox0df3e7dfd83464c=combobox
 ~|~popupArea.CopyHBox03c50b568f6cf4d=box
-~|~popupArea.segArea=segment2
 ~|~popDueDateFilter.CopyButton0bcf4d218cf034e=button
 ~|~frmValveInspection.CopyComboBox04f7c574a7dcd44=combobox
 ~|~frmCreateWO.CopyLabel0e3617d6326f84b=label
@@ -380,19 +371,18 @@
 ~|~frmViewMoreInfo.CopyLabel047f5f421bd714c=label
 ~|~popupFacSubsys.CopyButton0d309ac8273324d=button
 ~|~frmEditActiveWO.CopyLabel0153b3fa9cb4742=label
-~|~popupFacility.CopyhbxSelectedSite05d923b0728644e=box
 ~|~frmCreateWO.Button08e5b64d51bdf48=button
 ~|~popChangeWOStatus.cbxRemedyCode=combobox
 ~|~popupSubEquipment.CopyLabel0a563bd232a7b47=label
 ~|~frmViewActiveWO.CopyLabel031f28d49ab994e=label
+~|~popupArea.seg=segment2
 ~|~frmValveInspection.HBox05cbcde93563743=box
 ~|~frmViewMoreInfo.navMoreInfo=button
 ~|~frmViewAwaitingWO.CopyHBox01dce313e08ef4b=box
-~|~frmViewActiveWO.CopyHBox0347de8a4cc4e4c=box
 ~|~popupFacSystem.CopyLabel0ab50451d3bfe4c=label
+~|~frmViewActiveWO.CopyHBox0347de8a4cc4e4c=box
 ~|~frmActiveWOList.HBox05c37b97b56e248=box
 ~|~frmDowntime.CopyLabel07088c5013f9142=label
-~|~popupFacility.CopyhbxSelectedSite0aa642f6cad4048=box
 ~|~frmEditActiveWO.CopyButton0f8ce1e3199d448=button
 ~|~frmDowntime.navDowntime=button
 ~|~popupSubEquipment.CopyLabel073565767bf2c40=label
@@ -412,12 +402,10 @@
 ~|~popupSubEquipment.CopyButton0bff0799a297747=button
 ~|~popTimePicker=popup
 ~|~popupFacSystem.CopyButton014f1dabe477444=button
-~|~popupFacility.CopyhbxSelectedSite007da9a7250b541=box
 ~|~popupFacSystem.CopyhbxSelectedSite01d453b02334346=box
 ~|~frmValveInspection.CopyComboBox0b9f886476ef04d=combobox
 ~|~frmValveInspection.CopyLabel0b2416cfad20d4e=label
 ~|~popupFacSubsys.CopyhbxSelectedSite0bc0535e4be6f4b=box
-~|~popupArea.lblSite=label
 ~|~frmValveInspection.CopyLabel006a0caa30f0040=label
 ~|~frmValveInspection.CopyLabel011d19559ba1048=label
 ~|~popupInstrument.Button09ef9222c9d0a4f=button
@@ -482,15 +470,15 @@
 ~|~popupSubEquipment.CopyLabel028755ca915a644=label
 ~|~frmDowntime.CopyLabel0785a8565186e47=label
 ~|~frmValveInspection.CopyLabel040a42463738d46=label
+~|~popupSite.seg=segment2
 ~|~frmCreateWO.ButtonScanbarcode=button
-~|~popupGGS.CopyLabel086855137039b46=label
 ~|~frmDowntime.navMoreInfo=button
-~|~popupGGS.CopyhbxSelectedSite02e5098e958a14d=box
 ~|~popupFacSubsys.CopyhbxSelectedArea0bff36d5ae3354a=box
 ~|~frmValveInspection.CopyComboBox0efc3eb6e6b7049=combobox
 ~|~popupInstrument.CopyhbxSelectedSite05b6e98d803574b=box
 ~|~frmEditActiveWO.CopyLabel08e13c98c0c2c44=label
 ~|~frmDowntime.Label0cb58afb2d3654f=label
+~|~popupFacility.seg=segment2
 ~|~frmEditActiveWO.CopyHBox0c701a99e47954c=box
 ~|~frmApprovalWOList.vboxNav=box
 ~|~frmCreateWO.CopyLabel04c54fb2075b049=label
@@ -506,10 +494,12 @@
 ~|~popTimePicker.CopyButton0d1454a321f8845=button
 ~|~frmCreateWO.cbxWorkSubcategory=combobox
 ~|~frmEditActiveWO.CopyVBox0e2dfec9a5dbb41=box
+~|~popupGGS.lbl2=label
+~|~popupGGS.lbl1=label
 ~|~popupFacSystem.CopyhbxSelectedSite06fe554dd85f942=box
-~|~popupGGS.CopyButton05b86474a8d924e=button
 ~|~frmActiveWOList.hboxMain=box
 ~|~frmViewMoreInfo.CopyLabel098b20d3da7094d=label
+~|~popupFacility.CopyButton028570489d35040=button
 ~|~popupSubEquipment.CopyLabel0256dbfcab7164b=label
 ~|~frmCreateWO.CopyComboBox0e3d53e26078543=combobox
 ~|~popupEquipment.CopyLabel027020417ad9c4f=label
@@ -524,6 +514,7 @@
 ~|~frmCreateWO.hboxAsset=box
 ~|~popupInstrument.CopyhbxSelectedSite08aa7e0ae21cb44=box
 ~|~frmViewMoreInfo.CopyVBox0e0301e03413642=box
+~|~popupFacility.CopyButton0ccfb73b5615340=button
 ~|~frmValveInspection.CopyLabel0516994f31fb643=label
 ~|~frmCreateWO.CopyLabel0231d0ce05c444c=label
 ~|~frmCreateWO.cbxWorkSubtype=combobox
@@ -538,11 +529,11 @@
 ~|~popupFacSystem.CopyLabel0c565109fad2442=label
 ~|~popLocationFilter.hbox1568159912380697=box
 ~|~frmMoreInfoList.Segment06653d08601054e=segment2
-~|~popupSite.segSite=segment2
 ~|~frmEditActiveWO.navAwaitingApproval=button
 ~|~popLongdesc.VBox049a8fca94aba47=box
 ~|~frmValveInspection.CopyLabel044b12f557bcf46=label
 ~|~frmValveInspection.CopyComboBox0f2eeb744183b4a=combobox
+~|~popupGGS.seg=segment2
 ~|~popupInstrument.CopyLabel0304513b4bd164c=label
 ~|~frmDowntime.CopyLabel09cb1d3e97e584b=label
 ~|~frmDowntime.CopyButton0026074a9ed2447=button
@@ -555,16 +546,13 @@
 ~|~popupEquipment.CopyhbxSelectedSite0a443af55b4cf47=box
 ~|~popupFacSubsys.CopyhbxSelectedSite07c9b2bc9e22f46=box
 ~|~frmViewActiveWO.CopyLabel04eb1ca1ff91947=label
-~|~popupGGS.CopyHBox089c6bf05ccb649=box
 ~|~frmValveInspection.Button03a4b925a66854f=button
 ~|~popChangeWOStatus.CopyLabel0e3acf65ae3d946=label
 ~|~frmCreateWO.hboxButtons=box
 ~|~frmValveInspection.CopyLabel0f4a939db351742=label
-~|~popupGGS.CopyhbxSelectedSite00eb4dd3bc5154b=box
 ~|~popupArea=popup
 ~|~frmDowntime=form2
 ~|~popupInstrument.CopyLabel04978c808a0c34e=label
-~|~popupFacility.CopyButton032a8499cffa945=button
 ~|~frmViewActiveWO.CopyButton02743da793a5a45=button
 ~|~popTimePicker.CopyLabel0bc3ac36c30f842=label
 ~|~popupSubEquipment.CopyLabel0e4bd9053300540=label
@@ -607,7 +595,6 @@
 ~|~frmApprovalWOList.navAwaitingApproval=button
 ~|~popLongdesc.HBox02b07e2e0911b45=box
 ~|~frmCreateWO.hboxTitle=box
-~|~popupFacility.CopyButton0290c7985b90144=button
 ~|~popupSubEquipment.CopyhbxSelectedSite0e431b69d121343=box
 ~|~frmEditActiveWO.vboxNav=box
 ~|~frmEditActiveWO.CopyLabel0e6b4ba6a0c7b42=label
@@ -616,4 +603,7 @@
 ~|~frmViewAwaitingWO.CopyHBox08b4357c544c342=box
 ~|~popupFacSystem.CopyhbxSelectedSite0af1187eedf7944=box
 ~|~frmValveInspection.CopyHBox0ba7f6079ac4341=box
+~|~popupFacility.lbl3=label
+~|~popupFacility.lbl2=label
+~|~popupFacility.lbl1=label
 ~|~frmCreateWO.navMoreInfo=button
