--- a/widgetinfo.properties
+++ b/widgetinfo.properties
@@ -1,5 +1,5 @@
 #
-#Fri May 23 17:08:56 EDT 2014
+#Fri May 23 22:08:16 EDT 2014
 tablet$0$frmViewMoreInfo.CopyLabel08691d38a20c54c=label
 tablet$0$frmApprovalWOList.navMoreInfo=button
 tablet$0$popupFacSystem.CopyButton05c72f1e8858f40=button
@@ -9,12 +9,12 @@ tablet$0$popChangeWOStatus=popup
 tablet$0$frmViewActiveWO.CopyHBox05b1a6322d91c4d=box
 tablet$0$frmViewAwaitingWO.CopyLabel0f2d8e5c336284d=label
 tablet$0$frmViewActiveWO.navCreateWorkOrder=button
-tablet$0$popupGGS.CopyLabel0906a710f23404d=label
 tablet$0$popChangeWOStatus.HBox062dc4158474f4c=box
 tablet$0$popupSubEquipment.CopyLabel0d82e2db3e9f74a=label
 tablet$0$popChangeWOStatus.CopyLabel0ed6873da74f04c=label
 tablet$0$popupFacSubsys.CopyLabel05954a74c82294a=label
 tablet$0$frmViewMoreInfo.txtarMoreInfo=textarea2
+tablet$0$popupArea.hbx1=box
 tablet$0$frmViewActiveWO.HBox087a589b4e64d49=box
 tablet$0$popupArea.CopyHBox03c50b568f6cf4d=box
 tablet$0$frmViewActiveWO.VBox08a3358600dc841=box
@@ -28,6 +28,7 @@ tablet$0$popAttachments.CopyButton08b2f6dc0164346=button
 tablet$0$popupFacSubsys.CopyHBox055ca4f294ed649=box
 tablet$0$frmViewMoreInfo.Label027fba225f4ab44=label
 tablet$0$frmCreateWO.CopyLabel01313c791ff954c=label
+tablet$0$popupFacility.CopyHBox03c50b568f6cf4d=box
 tablet$0$popupFacSystem.CopyLabel0a9b6774f91af40=label
 tablet$0$popDueDateFilter.hbox1568159912380697=box
 tablet$0$frmValveInspection.CopyButton0226a251a7d2f45=button
@@ -36,9 +37,11 @@ tablet$0$frmEditActiveWO.CopyButtonScanbarcode04465f98f4f8c40=button
 tablet$0$popupFacSubsys=popup
 tablet$0$frmViewActiveWO.CopyHBox02c4896e022d34e=box
 tablet$0$frmDowntime.CopyLabel01f62ce85e2914f=label
+tablet$0$popupGGS.CopyHBox03c50b568f6cf4d=box
 tablet$0$popLongdesc.VBox049a8fca94aba47=box
 tablet$0$frmActiveWOList.HBox05c37b97b56e248=box
 tablet$0$frmViewMoreInfo.CopyLabel098b20d3da7094d=label
+tablet$0$popupGGS.CopyButton0ccfb73b5615340=button
 tablet$0$frmDowntime.CopyLabel02c96feb07aba4f=label
 tablet$0$frmValveInspection.CopyComboBox0df3e7dfd83464c=combobox
 tablet$0$frmValveInspection.CopyLabel0faac95a083c447=label
@@ -70,20 +73,16 @@ tablet$0$frmViewAwaitingWO.HBox063dff2d238b340=box
 tablet$0$frmValveInspection.VBox0ce3a326052c948=box
 tablet$0$frmViewActiveWO.CopyLabel09480630601e349=label
 tablet$0$frmValveInspection.Switch0974badc4c0be4d=switch
-tablet$0$popupGGS.CopyLabel086855137039b46=label
 tablet$0$popupSubEquipment.CopyLabel02f8b50d7cbc14e=label
 tablet$0$popChangeWOStatus.RadioButtonGroup0ec7239fce7c242=radiobuttongroup
-tablet$0$popupFacility.CopyLabel06d01cb1f9efe4c=label
 tablet$0$frmViewAwaitingWO.Button0698bbc9e4f1746=button
 tablet$0$frmCreateWO.CopyButton07b4dc01acbe946=button
-tablet$0$popupFacility.CopyhbxSelectedSite05d923b0728644e=box
 tablet$0$frmCreateWO.CopyButton00efc277a014444=button
 tablet$0$popupInstrument.CopyLabel0304513b4bd164c=label
 tablet$0$frmViewAwaitingWO.CopyHBox054a7688c99f04c=box
 tablet$0$frmViewActiveWO.CopyLabel04eb1ca1ff91947=label
 tablet$0$frmValveInspection.Button03a4b925a66854f=button
 tablet$0$frmMainMenu.hboxMain=box
-tablet$0$popupFacility.CopyhbxSelectedSite0aa642f6cad4048=box
 tablet$0$popupInstrument.CopyLabel04978c808a0c34e=label
 tablet$0$frmViewMoreInfo.CopyLabel0f880717279644d=label
 tablet$0$hdrEdit=header
@@ -96,8 +95,8 @@ tablet$0$popupSubEquipment.CopyLabel0ac66e61b1efc4e=label
 tablet$0$frmValveInspection.CopyTextField0172af93a903d4b=textbox2
 tablet$0$frmValveInspection.CopyHBox0c8e31857ed904e=box
 tablet$0$frmViewAwaitingWO.CopyLabel041c1b738c2ad44=label
-tablet$0$frmViewActiveWO.CopyLabel0e3b6b4c1993c4f=label
 tablet$0$popupInstrument.Button046ec36f894e941=button
+tablet$0$frmViewActiveWO.CopyLabel0e3b6b4c1993c4f=label
 tablet$0$frmCreateWO.vboxNav=box
 tablet$0$popAttachments.HBox024685c11b3444c=box
 tablet$0$frmActiveWOList=form2
@@ -105,7 +104,6 @@ tablet$0$frmValveInspection=form2
 tablet$0$frmViewActiveWO.CopyLabel06e59122393494c=label
 tablet$0$frmEditActiveWO.Label0309d5df4fd9b4e=label
 tablet$0$frmCreateWO.CopyLabel0fbaf304a5d4c42=label
-tablet$0$popupFacility.CopyhbxSelectedSite007da9a7250b541=box
 tablet$0$frmViewAwaitingWO.CopyLabel0d5715dadfc7b44=label
 tablet$0$popupFacSystem.CopyLabel05f98900c65984d=label
 tablet$0$frmValveInspection.CopyHBoxproblemCode09f431432eb0743=box
@@ -119,8 +117,8 @@ tablet$0$frmValveInspection.CopyLabel08ffa363d9fc546=label
 tablet$0$frmDowntime.CopyLabel09cb1d3e97e584b=label
 tablet$0$frmActiveWOList.btnLocationFilter=button
 tablet$0$frmApprovalWOList.navActiveWorkOrders=button
+tablet$0$popupGGS.CopyButton028570489d35040=button
 tablet$0$frmViewActiveWO.CopyLabel0d3e7dedc7fef4d=label
-tablet$0$popupFacility.CopyLabel04fbe6ca6263849=label
 tablet$0$popupSubEquipment.CopyLabel068c877c6f3f44d=label
 tablet$0$frmCreateWO.CopyHBoxproblemCode03e239211b13f46=box
 tablet$0$popupFacSubsys.CopyhbxSelectedSite0bc0535e4be6f4b=box
@@ -135,7 +133,6 @@ tablet$0$frmValveInspection.CopyHBox012bf2ca78f6141=box
 tablet$0$popChangeWOStatus.CopyLabel0004a850eaf7e49=label
 tablet$0$frmMoreInfoList.navMoreInfo=button
 tablet$0$frmEditActiveWO.CopyLabel0e6b4ba6a0c7b42=label
-tablet$0$popupArea.segArea=segment2
 tablet$0$HBox05936750fff9f49=box
 tablet$0$frmMoreInfoList.navDowntime=button
 tablet$0$frmMoreInfoList.vboxNav=box
@@ -147,6 +144,7 @@ tablet$0$frmActiveWOList.lblPriorityFilter=label
 tablet$0$frmViewAwaitingWO.CopyHBox08f44f5d749384d=box
 tablet$0$frmViewMoreInfo.HBox063dff2d238b340=box
 tablet$0$popupInstrument.CopyLabel0fcc56a69114040=label
+tablet$0$popupFacility.hbox1568159912432590=box
 tablet$0$popupInstrument.CopyLabel0d8358e8536fb4d=label
 tablet$0$frmViewActiveWO.CopyLabel049e0403d6ac747=label
 tablet$0$frmViewActiveWO.CopyHBox0347de8a4cc4e4c=box
@@ -156,6 +154,7 @@ tablet$0$frmViewAwaitingWO.CopyHBox0620cdd4316d042=box
 tablet$0$popupInstrument.CopyLabel079d72d55877849=label
 tablet$0$popWOApproval.CopytxtComment0f1009f615f5e46=textarea2
 tablet$0$popDueDateFilter.CopyButton0d1454a321f8845=button
+tablet$0$popupArea.seg=segment2
 tablet$0$frmApprovalWOList.CopyVBox0e0301e03413642=box
 tablet$0$frmCreateWO.navCreateWorkOrder=button
 tablet$0$frmViewAwaitingWO.CopyLabel047f5f421bd714c=label
@@ -168,15 +167,16 @@ tablet$0$frmViewActiveWO.CopyHBox07b6c0248cb0247=box
 tablet$0$frmCreateWO.hboxProblemCode=box
 tablet$0$popDueDateFilter.label1568159912380696=label
 tablet$0$popLocationFilter.label1568159912388250=label
-tablet$0$popupGGS.CopyButton0f561e1d9072c42=button
 tablet$0$frmMoreInfoList.navActiveWorkOrders=button
 tablet$0$frmViewActiveWO.CopyLabel04b6703bba78b4f=label
 tablet$0$popupInstrument.CopyhbxSelectedSite0aa9de63963934a=box
 tablet$0$popWOApproval.CopyButton0b8f8cdb5485741=button
 tablet$0$popupEquipment.CopyLabel01702a48bb98a48=label
 tablet$0$frmCreateWO.hboxWorkSubtype=box
+tablet$0$popupGGS.lbl2=label
 tablet$0$popupSubEquipment.CopyhbxSelectedSite0192113b2080f49=box
 tablet$0$frmValveInspection.HBox05cbcde93563743=box
+tablet$0$popupGGS.lbl1=label
 tablet$0$frmViewAwaitingWO.navDowntime=button
 tablet$0$popTimePicker=popup
 tablet$0$frmCreateWO.cbxWorkSubtype=combobox
@@ -214,7 +214,6 @@ tablet$0$frmEditActiveWO.CopyLabel05f17e1d5648a4d=label
 tablet$0$frmViewMoreInfo.vboxNav=box
 tablet$0$popupFacSystem.CopyhbxSelectedSite01d453b02334346=box
 tablet$0$popupFacSystem=popup
-tablet$0$popupArea.lblSite=label
 tablet$0$frmValveInspection.CopyComboBox0b9f886476ef04d=combobox
 tablet$0$popupFacSubsys.CopyLabel0bcd8fa3dfe3548=label
 tablet$0$frmViewActiveWO.hboxMain=box
@@ -252,6 +251,7 @@ tablet$0$frmValveInspection.CopyComboBox0988e7ee327ae40=combobox
 tablet$0$frmValveInspection.CopyLabel01c6bb54d8d1941=label
 tablet$0$frmViewActiveWO.CopyHBox01c5f3074c60f46=box
 tablet$0$frmEditActiveWO.CopyHBoxproblemCode092079a6a536a4e=box
+tablet$0$popupSite.seg=segment2
 tablet$0$popTimePicker.CopyLabel0bc3ac36c30f842=label
 tablet$0$popPriorityFilter.label1568159912388250=label
 tablet$0$frmEditActiveWO.CopyLabel0b49c2022ced747=label
@@ -267,7 +267,6 @@ tablet$0$frmViewAwaitingWO.navMoreInfo=button
 tablet$0$frmMainMenu.vboxNav=box
 tablet$0$frmCreateWO.CopyComboBox0e3d53e26078543=combobox
 tablet$0$frmValveInspection.CopyLabel00eb8a9f125c044=label
-tablet$0$popupGGS.CopyLabel075064154ee1545=label
 tablet$0$popupSubEquipment.CopyhbxSelectedSite007380155179146=box
 tablet$0$frmViewAwaitingWO.CopyHBox01dce313e08ef4b=box
 tablet$0$frmCreateWO.hboxAfterTheFactSwitch=box
@@ -277,11 +276,13 @@ tablet$0$popupInstrument.CopyhbxSelectedSite02bd92234e2c940=box
 tablet$0$frmEditActiveWO.CopyHBox0c97e7ed444a243=box
 tablet$0$frmEditActiveWO.CopyButton0f8ce1e3199d448=button
 tablet$0$popupFacSubsys.CopyhbxSelectedArea0bff36d5ae3354a=box
+tablet$0$popupFacility.seg=segment2
 tablet$0$popupSite.CopyButton0302e6379156b45=button
 tablet$0$frmViewMoreInfo.CopyLabel00f77a45ee9e548=label
 tablet$0$frmEditActiveWO.CopyLabel017435858ee574e=label
 tablet$0$frmValveInspection.CopyComboBox0efc3eb6e6b7049=combobox
 tablet$0$frmViewMoreInfo.CopyVBox0e0301e03413642=box
+tablet$0$popupFacility.CopyButton0ccfb73b5615340=button
 tablet$0$frmViewActiveWO.CopyLabel0783a75e697474d=label
 tablet$0$popAttachments.Label00ce247c1b5bc44=label
 tablet$0$popupFacSubsys.CopyButton0cf138484de6e4e=button
@@ -305,9 +306,11 @@ tablet$0$frmViewMoreInfo.navCreateWorkOrder=button
 tablet$0$popupInstrument.CopyLabel06bd7446b1e3448=label
 tablet$0$frmViewMoreInfo.label1568159912405675=label
 tablet$0$popPriorityFilter=popup
+tablet$0$popupFacility.lbl3=label
+tablet$0$popupFacility.lbl2=label
 tablet$0$popLocationFilter.CopyButton0bcf4d218cf034e=button
+tablet$0$popupFacility.lbl1=label
 tablet$0$frmCreateWO.VBox0ae5e302cb95148=box
-tablet$0$popupArea.hbxSite=box
 tablet$0$frmValveInspection.CopyLabel044b12f557bcf46=label
 tablet$0$frmCreateWO.hboxAsset=box
 tablet$0$popupSubEquipment.CopyLabel073565767bf2c40=label
@@ -325,9 +328,7 @@ tablet$0$frmValveInspection.Button05714b209c9e646=button
 tablet$0$frmValveInspection.CopyLabel0f4a939db351742=label
 tablet$0$frmViewMoreInfo.CopyHBox08b4357c544c342=box
 tablet$0$frmDowntime.navDowntime=button
-tablet$0$popupSite.segSite=segment2
 tablet$0$frmViewActiveWO.CopyLabel08cb2e16ea0f643=label
-tablet$0$popupGGS.CopyhbxSelectedSite00eb4dd3bc5154b=box
 tablet$0$popLocationFilter.hbox1568159912380697=box
 tablet$0$frmActiveWOList.CopyVBox0b99ec925d1d34a=box
 tablet$0$frmDowntime.CopyLabel0b1d9abb0f3424a=label
@@ -359,15 +360,13 @@ tablet$0$frmApprovalWOList.CopySegment06d36cd0777dd4f=segment2
 tablet$0$frmViewAwaitingWO.CopyLabel0a085706adae14a=label
 tablet$0$frmValveInspection.Button0435c6286129d44=button
 tablet$0$popPriorityFilter.hbox1568159912380697=box
-tablet$0$popupFacility.CopyButton0290c7985b90144=button
 tablet$0$popupFacSystem.CopyhbxSelectedSite0c94a8df6020145=box
 tablet$0$popupSubEquipment.CopyhbxSelectedSite03c86d4d8b8a84a=box
-tablet$0$popupGGS.CopyhbxSelectedSite02e5098e958a14d=box
 tablet$0$frmDowntime.HBoxproblemCode04765c451d1d34e=box
+tablet$0$popupFacility.CopyButton028570489d35040=button
 tablet$0$frmDowntime.CopyButton05809a09c62a643=button
 tablet$0$popAttachments.Button0dfb95bb959a149=button
 tablet$0$frmViewActiveWO.CopyLabel07f281a084e0744=label
-tablet$0$popupGGS.CopyLabel02fe4739edbd74c=label
 tablet$0$popDueDateFilter.label1568159912388250=label
 tablet$0$popupEquipment.CopyLabel027020417ad9c4f=label
 tablet$0$frmCreateWO.CopyLabel06efe9974c73144=label
@@ -400,9 +399,9 @@ tablet$0$popupSubEquipment.CopyhbxSelectedSite0bead52ee20a34c=box
 tablet$0$frmApprovalWOList.hboxMain=box
 tablet$0$popupFacSubsys.CopyLabel02f792ddfb81749=label
 tablet$0$popupEquipment.CopyHBox03994091f821d41=box
+tablet$0$popupArea.lbl1=label
 tablet$0$CopyHBox05ab541b50c7444.CopyLabel089832aef2efe41=label
 tablet$0$popupSite.CopyHBox0cc3ff463eadc42=box
-tablet$0$popupFacility.CopyButton032a8499cffa945=button
 tablet$0$popupSubEquipment.CopyLabel028755ca915a644=label
 tablet$0$frmValveInspection.CopyTextField02665bad02df54e=textbox2
 tablet$0$popupInstrument.CopyLabel0927d495283204c=label
@@ -414,6 +413,8 @@ tablet$0$frmValveInspection.TextArea082feb7e2aedf4b=textarea2
 tablet$0$frmViewMoreInfo.CopyButton0769390d0dfe14e=button
 tablet$0$frmEditActiveWO.navMoreInfo=button
 tablet$0$frmActiveWOList.hboxMain=box
+tablet$0$popupGGS.hbx2=box
+tablet$0$popupGGS.hbx1=box
 tablet$0$frmEditActiveWO.navDowntime=button
 tablet$0$frmEditActiveWO.CopyHBox09009ce368a6249=box
 tablet$0$frmEditActiveWO=form2
@@ -469,7 +470,6 @@ tablet$0$frmViewActiveWO.CopyButton016b755f7107648=button
 tablet$0$popupSubEquipment.CopyhbxSelectedSite0b0b2cf00bbea48=box
 tablet$0$frmCreateWO.Button0862f8d887ce641=button
 tablet$0$popupSubEquipment.CopyLabel0e4bd9053300540=label
-tablet$0$popupFacility.CopyhbxSelectedArea0c570010f615341=box
 tablet$0$frmViewActiveWO.Label0dd01e45bbed64e=label
 tablet$0$frmCreateWO.hboxButtons=box
 tablet$0$frmCreateWO.hboxPriority=box
@@ -499,14 +499,13 @@ tablet$0$frmEditActiveWO.CopyComboBox05611e3e70d6a47=combobox
 tablet$0$frmCreateWO.CopyButtonScanbarcode0e5c2601049354c=button
 tablet$0$frmDowntime.CopyLabel07718c2ae276c41=label
 tablet$0$popDueDateFilter.calDueDate=calendar
-tablet$0$frmViewActiveWO.CopyLabel0b3fdd781891947=label
 tablet$0$popChangeWOStatus.cbxRemedyCode=combobox
+tablet$0$frmViewActiveWO.CopyLabel0b3fdd781891947=label
 tablet$0$popupGGS=popup
 tablet$0$frmActiveWOList.btnPriorityFilter=button
 tablet$0$frmViewAwaitingWO.navAwaitingApproval=button
 tablet$0$frmCreateWO.CopyLabel02578201702ac4a=label
 tablet$0$frmDowntime.Label0cb58afb2d3654f=label
-tablet$0$popupFacility.CopyLabel06bf7d9ba77e841=label
 tablet$0$frmValveInspection.CopyTextField0becb3bc1c46946=textbox2
 tablet$0$popupSubEquipment.CopyHBox0d6db1fa1345943=box
 tablet$0$popAttachments=popup
@@ -520,7 +519,6 @@ tablet$0$popupFacSystem.CopyLabel03cb8304f06e345=label
 tablet$0$popupInstrument.Label0bc97360a806d4d=label
 tablet$0$frmViewActiveWO.CopyButton0443fe6b1224e46=button
 tablet$0$frmViewMoreInfo.CopyLabel047f5f421bd714c=label
-tablet$0$popupFacility.CopyHBox09c3bdd4f285b41=box
 tablet$0$popupFacSystem.CopyLabel0c268c653490444=label
 tablet$0$frmValveInspection.CopyHBox0ba7f6079ac4341=box
 tablet$0$popupFacSubsys.CopyButton0d309ac8273324d=button
@@ -530,9 +528,8 @@ tablet$0$popWOApproval.CopyLabel03190e30a9e724f=label
 tablet$0$frmEditActiveWO.CopyLabel0153b3fa9cb4742=label
 tablet$0$frmCreateWO.hboxDescription=box
 tablet$0$popupFacSubsys.CopyhbxSelectedSite0d7502134fc0241=box
-tablet$0$popupFacility.CopyLabel0f94c0f0c70304a=label
+tablet$0$popupGGS.seg=segment2
 tablet$0$frmCreateWO.navMoreInfo=button
-tablet$0$popupGGS.CopyLabel0883f05b779ee4b=label
 tablet$0$frmViewActiveWO.CopyLabel031f28d49ab994e=label
 tablet$0$popLocationFilter=popup
 tablet$0$frmViewAwaitingWO.CopyLabel00e429794d33c49=label
@@ -542,7 +539,6 @@ tablet$0$frmViewAwaitingWO.CopyHBox043a43f721e3f44=box
 tablet$0$frmMoreInfoList.CopyVBox05c46e1637ddc4d=box
 tablet$0$frmDowntime.CopyComboBox0c4d3e9e37f1c49=combobox
 tablet$0$frmCreateWO.CopyLabel0e3617d6326f84b=label
-tablet$0$popupGGS.CopyhbxSelectedSite0549c96d36a1343=box
 tablet$0$frmEditActiveWO.CopyComboBox0ba0a2256cbb641=combobox
 tablet$0$frmCreateWO.hboxCauseCode=box
 tablet$0$popPriorityFilter.cbxPriorityFilter=combobox
@@ -551,16 +547,15 @@ tablet$0$popupFacSystem.CopyhbxSelectedSite0675e4a635f8e47=box
 tablet$0$popChangeWOStatus.CopyLabel0c6177723e9dd4a=label
 tablet$0$frmViewActiveWO.navAwaitingApproval=button
 tablet$0$frmViewAwaitingWO.CopyLabel0933d517e58f64b=label
-tablet$0$popupFacility.CopyLabel079f089a6f5cc4a=label
-tablet$0$popupGGS.CopyButton05b86474a8d924e=button
 tablet$0$frmValveInspection.CopyHBox0f8a66579044d48=box
+tablet$0$popupFacility.hbx2=box
 tablet$0$frmDowntime.CopyHBoxproblemCode07a9f578aff6d42=box
+tablet$0$popupFacility.hbx1=box
 tablet$0$popLocationFilter.combobox1568159912394375=combobox
 tablet$0$frmViewMoreInfo.CopyLabel041c1b738c2ad44=label
 tablet$0$frmViewActiveWO.CopyLabel00d08986766644b=label
 tablet$0$frmEditActiveWO.hboxMain=box
 tablet$0$frmViewActiveWO.CopyHBox068511e508f094c=box
-tablet$0$popupGGS.CopyhbxSelectedSite082e4cae5fdbe4d=box
 tablet$0$frmDowntime.CopyHBoxproblemCode0cda5c8d6f0b64c=box
 tablet$0$frmValveInspection.CopyHBoxproblemCode0046f8572b8a246=box
 tablet$0$frmEditActiveWO.CopyHBoxproblemCode0bd30cdde1ba740=box
@@ -572,9 +567,7 @@ tablet$0$frmValveInspection.CopyTextField0da51ecca6a4e4f=textbox2
 tablet$0$frmEditActiveWO.CopyButton033014ad5d0e942=button
 tablet$0$frmDowntime.CopyHBoxproblemCode04762a265862f40=box
 tablet$0$popupFacSystem.CopyButton014f1dabe477444=button
-tablet$0$popupGGS.CopyHBox089c6bf05ccb649=box
 tablet$0$frmValveInspection.TextField071bce55c3c6243=textbox2
-tablet$0$popupFacility.CopyhbxSelectedSite05fc745519d4642=box
 tablet$0$frmMoreInfoList=form2
 tablet$0$popAttachments.HBox0bf1bab1918e642=box
 tablet$0$frmValveInspection.CopyLabel074706e038d174f=label
@@ -585,7 +578,6 @@ tablet$0$popTimePicker.CopyPickerView0140335c3acad46=pickerview
 tablet$0$frmViewActiveWO.Button0b6a1c72615e449=button
 tablet$0$frmEditActiveWO.CopyButtonScanbarcode0b62a166cd65640=button
 tablet$0$popupSubEquipment.CopyLabel0798cebc05c294e=label
-tablet$0$popupGGS.CopyhbxSelectedArea07dba3971ff5c41=box
 tablet$0$frmViewActiveWO.CopyLabel0dc86a909f31942=label
 tablet$0$popChangeWOStatus.cbxCauseCode=combobox
 tablet$0$frmViewActiveWO.navDowntime=button
@@ -611,9 +603,7 @@ tablet$0$frmDowntime.CopyComboBox0498bfcc9997347=combobox
 tablet$0$frmDowntime.Button04d8b6375b2ef41=button
 tablet$0$frmValveInspection.CopyTextField0cf856c2e055e46=textbox2
 tablet$0$frmViewAwaitingWO.CopyButton0a7c6edbb2be947=button
-tablet$0$popupFacility.CopyLabel05b54879243f14a=label
 tablet$0$frmValveInspection.CopyHBoxproblemCode0ca816d574b8640=box
-tablet$0$popupFacility.CopyhbxSelectedSite051f8339c86a447=box
 tablet$0$frmEditActiveWO.CopyLabel0606f8d47cfa740=label
 tablet$0$frmCreateWO.CopyLabel0334243ede31d4f=label
 tablet$0$frmViewMoreInfo.CopyHBox08f44f5d749384d=box
