Location/Asset hierarchy navigation is pretty good.  Still need to skin the selected item.

--- a/lua_widget_m4_info.properties
+++ b/lua_widget_m4_info.properties
@@ -1,5 +1,5 @@
 #This file contains the lua m4Constants, the widgetQualifying ids and the type of the widget
-#Tue May 27 13:57:25 EDT 2014
+#Tue May 27 23:06:20 EDT 2014
 ~|~frmDowntime.HBox0c75f81874c1f42=box
 ~|~frmValveInspection.HBox0b56740eae09645=box
 ~|~popTimePicker.CopyButton0bcf4d218cf034e=button
@@ -299,7 +299,6 @@
 ~|~frmActiveWOList.btnPriorityFilter=button
 ~|~frmViewMoreInfo.CopyLabel0f2d8e5c336284d=label
 ~|~frmDowntime.navAwaitingApproval=button
-~|~frmCreateWO.Label03e6fb1d37b3342=label
 ~|~frmViewActiveWO.CopyHBox07b6c0248cb0247=box
 ~|~popupFacSystem.CopyButton0ccfb73b5615340=button
 ~|~frmCreateWO.CopyLabel02578201702ac4a=label
@@ -440,6 +439,7 @@
 ~|~frmCreateWO.Label0d28fb78c50c74e=label
 ~|~frmMainMenu.HBox02a622e1fa48a45=box
 ~|~HBox05936750fff9f49=box
+~|~frmCreateWO.lblAsset=label
 ~|~popDueDateFilter=popup
 ~|~frmViewActiveWO=form2
 ~|~frmCreateWO.hboxPriority=box
