--- a/widgetinfo.properties
+++ b/widgetinfo.properties
@@ -1,5 +1,5 @@
 #
-#Tue May 27 13:57:25 EDT 2014
+#Tue May 27 23:06:20 EDT 2014
 tablet$0$frmViewMoreInfo.CopyLabel08691d38a20c54c=label
 tablet$0$frmApprovalWOList.navMoreInfo=button
 tablet$0$frmViewMoreInfo.CopyHBox0620cdd4316d042=box
@@ -171,6 +171,7 @@ tablet$0$popupFacSubsys.hbxButtons=box
 tablet$0$popupGGS.lbl2=label
 tablet$0$frmValveInspection.HBox05cbcde93563743=box
 tablet$0$popupGGS.lbl1=label
+tablet$0$frmCreateWO.lblAsset=label
 tablet$0$frmViewAwaitingWO.navDowntime=button
 tablet$0$popTimePicker=popup
 tablet$0$frmCreateWO.cbxWorkSubtype=combobox
@@ -406,7 +407,6 @@ tablet$0$frmEditActiveWO.navDowntime=button
 tablet$0$frmEditActiveWO.CopyHBox09009ce368a6249=box
 tablet$0$frmEditActiveWO=form2
 tablet$0$frmActiveWOList.Segment01e92683e273f49=segment2
-tablet$0$frmCreateWO.Label03e6fb1d37b3342=label
 tablet$0$frmDowntime.hboxMain=box
 tablet$0$frmActiveWOList.Label058bff9804f4f45=label
 tablet$0$frmViewActiveWO.CopyLabel077a2e83b18404e=label
